# flask-template

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  extensions.py  settings.py
app/admin/: __init__.py  views.py
app/models/: user.py
app/resources/serializers/: user_model.py
app/resources/templates/admin/: custom_index.html
app/routes/auth/: __init__.py  login.py  profile.py  refresh.py
app/routes/errors/: views.py
migrations/versions/: 0f2079016438_add_users_table.py
